--- a/.github/workflows/judge.yml
+++ b/.github/workflows/judge.yml
@@ -18,3 +18,17 @@ jobs:
             diff -u template/base.txt work/answer.txt >> $GITHUB_STEP_SUMMARY || true
           fi
       - run: exit ${{ steps.judge.outputs.has_diff }}
+
+  step2b:
+    if: ${{ github.ref == 'refs/heads/step2b' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Judge
+        id: judge
+        run: result=$(diff -q template/step2b.txt work/answer.txt > /dev/null; echo $?) ; echo "has_diff=$result" >> $GITHUB_OUTPUT
+      - run: |
+          if [[ ${{ steps.judge.outputs.has_diff }} == 1 ]]; then \
+            diff -u template/step2b.txt work/answer.txt >> $GITHUB_STEP_SUMMARY || true
+          fi
+      - run: exit ${{ steps.judge.outputs.has_diff }}
