--- a/.github/workflows/judge.yml
+++ b/.github/workflows/judge.yml
@@ -24,11 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Judge
-        id: judge
+      - name: Judge file
+        id: judge_file
         run: result=$(diff -q template/step2b.txt work/answer.txt > /dev/null; echo $?) ; echo "has_diff=$result" >> $GITHUB_OUTPUT
       - run: |
           if [[ ${{ steps.judge.outputs.has_diff }} == 1 ]]; then \
             diff -u template/step2b.txt work/answer.txt >> $GITHUB_STEP_SUMMARY || true
           fi
-      - run: exit ${{ steps.judge.outputs.has_diff }}
+      - name: Judge merge
+        id: judge_merge
+        run: result=$(git merge --no-commit --no-ff main > /dev/null; echo $?) ; echo "has_conflict=$result" >> $GITHUB_OUTPUT
+      - run: [[ ${{ steps.judge_file.outputs.has_diff }} == 0 ]] && [[ ${{ steps.judge_merge.outputs.has_conflict }} == 0 ]] && exit 0 || exit 1
+
