--- a/.github/workflows/judge.yml
+++ b/.github/workflows/judge.yml
@@ -34,5 +34,6 @@ jobs:
       - name: Judge merge
         id: judge_merge
         run: result=$(git merge --no-commit --no-ff main > /dev/null; echo $?) ; echo "has_conflict=$result" >> $GITHUB_OUTPUT
-      - run: [[ ${{ steps.judge_file.outputs.has_diff }} == 0 ]] && [[ ${{ steps.judge_merge.outputs.has_conflict }} == 0 ]] && exit 0 || exit 1
+      - run: |
+          [[ ${{ steps.judge_file.outputs.has_diff }} == 0 ]] && [[ ${{ steps.judge_merge.outputs.has_conflict }} == 0 ]] && exit 0 || exit 1
 
