--- a/.github/workflows/judge.yml
+++ b/.github/workflows/judge.yml
@@ -35,5 +35,8 @@ jobs:
         id: judge_merge
         run: result=$(git merge --no-commit --no-ff main > /dev/null; echo $?) ; echo "has_conflict=$result" >> $GITHUB_OUTPUT
       - run: |
+          if [[ ${{ steps.judge_merge.outputs.has_conflict }} == 1 ]]; then \
+            echo ファイルのコンフリクトを解消しましょう >> $GITHUB_STEP_SUMMARY || true
+          fi
+      - run: |
           [[ ${{ steps.judge_file.outputs.has_diff }} == 0 ]] && [[ ${{ steps.judge_merge.outputs.has_conflict }} == 0 ]] && exit 0 || exit 1
-
