--- a/.github/workflows/judge.yml
+++ b/.github/workflows/judge.yml
@@ -18,3 +18,27 @@ jobs:
             diff -u template/base.txt work/answer.txt >> $GITHUB_STEP_SUMMARY || true
           fi
       - run: exit ${{ steps.judge.outputs.has_diff }}
+
+  step2b:
+    if: ${{ github.ref == 'refs/heads/step2b' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Judge file
+        id: judge_file
+        run: result=$(diff -q template/step2b.txt work/answer.txt > /dev/null; echo $?) ; echo "has_diff=$result" >> $GITHUB_OUTPUT
+      - run: |
+          if [[ ${{ steps.judge_file.outputs.has_diff }} == 1 ]]; then \
+            diff -u template/step2b.txt work/answer.txt >> $GITHUB_STEP_SUMMARY || true
+          fi
+      - name: Judge merge
+        id: judge_merge
+        run: git fetch origin main; result=$(git merge --no-commit --no-ff origin/main > /dev/null; echo $?) ; echo "has_conflict=$result" >> $GITHUB_OUTPUT
+      - run: |
+          if [[ ${{ steps.judge_merge.outputs.has_conflict }} == 1 ]]; then \
+            echo ファイルのコンフリクトを解消しましょう >> $GITHUB_STEP_SUMMARY || true
+          fi
+      - run: |
+          [[ ${{ steps.judge_file.outputs.has_diff }} == 0 ]] && [[ ${{ steps.judge_merge.outputs.has_conflict }} == 0 ]] && exit 0 || exit 1
